--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "../node_modules/bulma/bulma.sass";
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  background-color: #f1f1f1;
+}
+
+.gradient-button {
+  border: none;
+  background: linear-gradient(270deg, #42cfd0 0%, rgba(255, 255, 255, 0) 98.35%),
+    #6e33d4;
+  color: white;
+  font-weight: 600;
+  opacity: 0.92;
+
+  &:hover {
+    opacity: 1;
+    color: white;
+    box-shadow: 0px 0px 0px 4px rgba(black, 0.05);
+  }
+
+  &:active {
+    opacity: 0.8;
+  }
+
+  &:focus {
+    color: white;
+    opacity: 1;
+  }
+
+  i.material-icons {
+    margin-left: -3px;
+    margin-right: 5px;
+  }
+}
